--- a/fastapi-helloworld/pyproject.toml
+++ b/fastapi-helloworld/pyproject.toml
@@ -1,14 +1,18 @@
 [tool.poetry]
-name = "fastapi-helloworld"
+name = "fastapi-neon"
 version = "0.1.0"
 description = ""
-authors = ["Hamid Nisar <hamidnisarpiaic@gmail.com>"]
+authors = ["Zia Khan"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.110.0"
-uvicorn = {extras = ["standard"], version = "^0.28.0"}
+fastapi = "^0.110"
+uvicorn = {extras = ["standard"], version = "^0.27.1"}
+sqlmodel = "^0.0.16"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
+pytest = "^8.0.2"
+httpx = "^0.27.0"
 
 
 [build-system]
