--- a/online-class/.env
+++ b/online-class/.env
@@ -1,3 +1,3 @@
 DEBUG = True
-DATABASE_URL = postgresql://neondb_owner:eu54CVcxsSPm@ep-holy-glade-a10v4r8g-pooler.ap-southeast-1.aws.neon.tech/neondb_todos?sslmode=require
-TEST_DATABASE_URL = postgresql://neondb_owner:eu54CVcxsSPm@ep-calm-dew-a1tql0h5-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL ="postgresql://neondb_owner:eu54CVcxsSPm@ep-holy-glade-a10v4r8g-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+TEST_DATABASE_URL ="postgresql://neondb_owner:eu54CVcxsSPm@ep-calm-dew-a1tql0h5-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require" 
