--- a/online-class/pyproject.toml
+++ b/online-class/pyproject.toml
@@ -10,10 +10,11 @@ python = "^3.12"
 fastapi = "^0.110.0"
 uvicorn = "^0.29.0"
 sqlmodel = "^0.0.16"
-psycopg2 = "^2.9.9"
+psycopg = {extras = ["binary"], version = "^3.1.18"}
 pytest = "^8.1.1"
 httpx = "^0.27.0"
-pytest-anyio = "^0.0.0"
+
+
 
 
 [build-system]
